# loopy

./: .gitignore  .gitlab-ci.yml  .gitmodules  .pylintrc  .pylintrc-local.yml  .test-conda-env-py3.yml  .test-conda-env.yml  0001-fix-stringify.patch  0002-fix-stringify.patch  0003-fix-stringify.patch  CITATION.cff  MANIFEST.in  MEMO  README.rst  TODO  \  asv.conf.json  azure-pipelines.yml  build-py-project-and-run-examples.sh  insn-to-statement.sh  loopy.spec  pyproject.toml  pytest.xml  requirements-old-pyopencl.txt  requirements.txt  run-mypy.sh  run-pyinstaller.sh  run-pylint.sh  setup.cfg  setup.py  stmt-compat-fixes.patch
.basedpyright/: baseline.json
.ci/: examples-funcs.sh
.github/workflows/: autopush.yml  ci.yml  publish.yaml
benchmarks/: run_sumpy_kernels.py
build-helpers/: .gitignore  loopy.spec  make-linux-build-docker-inner-part-2.sh  make-linux-build-docker-inner.sh  make-linux-build-docker.sh  run-pyinstaller.sh  upload.sh
contrib/: c-integer-semantics.py
contrib/floopy-highlighting/: floopy.vim
contrib/mem-pattern-explorer/: pattern_vis.py
doc/: Makefile  conf.py  guide.rst  index.rst  misc.rst  ref_call.rst  ref_creation.rst  ref_internals.rst  ref_kernel.rst  ref_naming.rst  ref_other.rst  ref_program.rst  ref_scoped_functions.rst  ref_transform.rst  ref_translation_unit.rst  reference.rst  tutorial.rst  upload-docs.sh
examples/: acoustics3d.lpy  call-external.py  cmdl  compute-tiled-matmul.py  dg.py  find-centers.py  global_barrier_removal.py  hello-loopy.cl  hello-loopy.py  ispc-stream-harness.py  matrix-mul.py  matrix-ops.py  quadrature.py  rank-one.py  sem_reagan.py  sparse.py  vector-types.cl  vector-types.py
examples/fortran/: IPython Integration Demo.ipynb  foo.floopy  ipython-integration-demo.ipynb  matmul-driver.py  matmul.floopy  outerprod.py  run-floopy.sh  run-loopy.sh  sparse.floopy  tagging.floopy  volumeKernel.floopy  volumeKernelSimple.floopy
examples/python/: call-external.py  find-centers.py  global_barrier_removal.py  hello-loopy-lp.py  hello-loopy.loopy  hello-loopy.py  ispc-harness.py  ispc-stream-harness.py  loop_unroll_codegen.py  pycuda-loopy.py  rank-one.py  run-ispc-harness.sh  sparse.py  vector-types.py
examples/python/compute-examples/: benchmark_output.py  compute-tiled-matmul.py  finite-difference-2-5D.py  finite-difference-diamond-3d.py  finite-difference-diamond.py  l2p-3d-tensor-product-compute.py  l2p-tiled-basis-compute.py  m2m-sum-factorization.py  matmul.py  p2m-basis-compute.py  run-compute-examples.sh  wave-equation-ring-buffer.py
loopy/: ;  __init__.py  __main__.py  array_buffer.py  array_buffer_map.py  auto_test.py  buffer.py  buffer_writes.py  check.py  cli.py  compiled.py  context_matching.py  creation.py  cse.py  diagnostic.py  diff.py  execution.py  expression.py  flags.py  fusion.py  ipython_ext.py  isl.py  isl_helpers.py  kernel.py  loop.py  match.py  maxima.py  options.py  padding.py  precompute.py  prefetch.py  preprocess.py  program.py  prophormance.py  reduction.py  relations.py  schedule.py  statistics.py  subst.py  symbolic.py  (+6 more)
loopy/codegen/: __init__.py  auxiliary_kernels.py  bounds.py  control.py  device_mapping.py  dispatch.py  expression.py  instruction.py  loop.py  loop_dim.py  prefetch.py  result.py  statement.py  tools.py
loopy/frontend/fortran/: __init__.py  diagnostic.py  expression.py  translator.py  tree.py
loopy/kernel/: __init__.py  array.py  creation.py  data.py  dependency.py  function_interface.py  instruction.py  reduction_callable.py  statement.py  tools.py
loopy/schedule/: __init__.py  device_mapping.py  tools.py  tree.py  verification.py
loopy/schedule/checker/: __init__.py  dependency.py  lexicographic_order_map.py  schedule.py  utils.py
loopy/transform/: __init__.py  add_barrier.py  arithmetic.py  array_buffer_map.py  batch.py  buffer.py  callable.py  compute.py  concatenate.py  data.py  dependency.py  diff.py  domain.py  fusion.py  ilp.py  iname.py  instruction.py  loop_distribution.py  loop_fusion.py  make_scalar.py  merge_arrays.py  pack_and_unpack_args.py  padding.py  parallelize.py  parameter.py  precompute.py  privatize.py  realize_reduction.py  reduction.py  register_callable.py  register_knl.py  reindex.py  save.py  spill.py  statement.py  subst.py  write_to_python.py
pocl-cache/: tempfile_2eejO1.cl  tempfile_Eo6yDG.cl  tempfile_QSznKW.cl  tempfile_TWm8nx.cl  tempfile_a60jyz.cl  tempfile_w8Xjwm.cl
pocl-cache/AH/DKLLHBPHPEDNHCHLCGOMELIAGNDOGBLKHLAIO/: program.bc
pocl-cache/AH/DKLLHBPHPEDNHCHLCGOMELIAGNDOGBLKHLAIO/loopy_kernel/0-0-0/: parallel.bc
pocl-cache/AH/DKLLHBPHPEDNHCHLCGOMELIAGNDOGBLKHLAIO/loopy_kernel/1-1-1-goffs0-smallgrid/: parallel.bc
pocl-cache/AL/KHBJAJJHMLLOBOAPDFHEMJPLEFLPEPCMBJLJC/: program.bc
pocl-cache/AL/KHBJAJJHMLLOBOAPDFHEMJPLEFLPEPCMBJLJC/scalar_comparison_kernel/0-0-0-goffs0-smallgrid/: parallel.bc
pocl-cache/CH/ADKEDMEPAGJMOCMOIKEAPKLOHNDOIAOPKGGBG/: program.bc
pocl-cache/DB/FKODHKMABCPOCHLFACNMKDMJFMBAMJKKLBGKD/: program.bc
pocl-cache/FM/KOBGOCNPKOIPNCPDLDNPCLFDAOPPHNJBHCBNJ/: program.bc
pocl-cache/NF/EELNPICNPMLEIPPMHOALCIAPLOAOCHHLAACIF/: program.bc
proto-tests/: test_dg.py  test_fem_assembly.py  test_sem.py  test_sem_reagan.py  test_sem_tim.py  test_tim.py
test/: gnuma_loopy_transforms.py  library_for_test.py  pytest.xml  strongVolumeKernels.f90  test_advect.py  test_advect_dealias.py  test_apps.py  test_c_execution.py  test_callables.py  test_compute.py  test_dependencies.py  test_dependency.py  test_dg.py  test_diff.py  test_domain.py  test_einsum.py  test_expression.py  test_fem_assembly.py  test_fortran.py  test_from_loopy_import_star.py  test_fusion.py  test_interp_diff.py  test_isl.py  test_ispc_execution.py  test_linalg.py  test_linearization_checker.py  test_loop_distribution.py  test_loop_fusion.py  test_loop_nest_semantics.py  test_loopy.py  test_matmul.py  test_misc.py  test_nbody.py  test_nest_constraints.py  test_numa_diff.py  test_pycuda_invoker.py  test_reduction.py  test_scan.py  test_sem.py  test_sem_reagan.py  (+8 more)
(+14 files in other folders)
