[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "loopy"
version = "2025.2"
description = "A code generator for array-based code on CPUs and GPUs"
readme = "README.rst"
license = "MIT"
authors = [
    { name = "Andreas Kloeckner", email = "inform@tiker.net" },
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Other Audience",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]
dependencies = [
    "pytools>=2025.2.2",
    "pymbolic>=2024.2.2",
    "genpy>=2016.1.2",

    # https://github.com/inducer/loopy/pull/419
    "numpy>=1.19",

    "cgen>=2025.1",
    "islpy>=2025.2.5",
    "codepy>=2017.1",
    "colorama",
    "Mako",
    "constantdict",

    "typing-extensions>=4",
]
[project.optional-dependencies]
pyopencl = [
    "pyopencl>=2022.3",
]
fortran = [
    "fparser>=0.2.0",
    "ply>=3.6",
]

[dependency-groups]
dev = [
    # https://github.com/astral-sh/ruff/issues/16943
    "ruff!=0.11.1,!=0.11.2",
    "types-colorama",
    "types-Pygments",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
exclude = [
  "/loopy/target/c/compyte/.*",
  "/.test*.yml",
  "/asv*.json",
  "/MEMO",
  "/requirements.txt",
  "/.ci*",
  "/.git*",
  "/.git*",
  "/doc/_build",
  "/run-*.sh",
  "/.editorconfig",
  "/.basedpyright",
]

[project.urls]
Documentation = "https://documen.tician.de/loopy"
Homepage = "https://github.com/inducer/loopy"

[tool.setuptools.package-dir]
# https://github.com/Infleqtion/client-superstaq/pull/715
"" = "."

[tool.ruff]
preview = true

[tool.ruff.lint]
extend-select = [
    "B",   # flake8-bugbear
    "C",   # flake8-comprehensions
    "E",   # pycodestyle
    "F",   # pyflakes
    "FA",  # flake8-future-annotations
    "I",   # flake8-isort
    "N",   # pep8-naming
    "NPY", # numpy
    "PGH", # pygrep-hooks
    "Q",   # flake8-quotes
    "RUF", # ruff
    "SIM", # flake8-simplify
    "TC",  # flake8-type-checking
    "UP",  # pyupgrade
    "W",   # pycodestyle
]
extend-ignore = [
    "C90",  # McCabe complexity
    "E226", # missing whitespace around operator
    "E402", # module level import not at the top of file
    "N817", # CamelCase `SubstitutionRuleMappingContext` imported as acronym `SRMC`
    "SIM102", # combine if statements
    "RUF067", # no code in __init__ *shrug*
    "TRY004",
    "TRY300",

    # FIXME
    "UP031", # .format instead of %s
    "BLE001",
]

[tool.ruff.lint.per-file-ignores]
"test/test_loopy.py" = ["B023"]
"loopy/frontend/fortran/translator.py" = ["N802", "B028"]
"proto-tests/*.py" = ["B"]
"contrib/**/*.py" = ["I002"]
"doc/conf.py" = ["I002", "S102"]
"*.ipynb" = ["I002"]
"examples/**/*.py" = ["I002"]
"proto-tests/**/*.py" = ["I002", "S102"]
"test/**/*.py" = ["I002"]
"test/test_*.py" = ["S102"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"
multiline-quotes = "double"

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = [
    "pytools",
    "pymbolic",
    "islpy",
    "pyopencl",
    "cgen",
    "genpy",
]
known-local-folder = [
    "loopy",
]
lines-after-imports = 2
required-imports = ["from __future__ import annotations"]

[tool.typos.default]
extend-ignore-re = [
  "(?Rm)^.*(#|//)\\s*spellchecker:\\s*disable-line$"
]

[tool.typos.default.extend-words]
# like the numpy function, array range
arange = "arange"
# N-Dimensional
ND = "ND"
# an element-wise slice of array u
ue = "ue"
# used in an ordering context, "ab" / "ba"
ba = "ba"
# Fortran Loopy
floopy = "floopy"

[tool.typos.files]
extend-exclude = [
  "loopy/target/c/compyte",
  "notes/*/*.eps",
]

[tool.pytest.ini_options]
addopts = "--ignore=proto-tests"
filterwarnings = [
    'ignore:.*:loopy.diagnostic.DirectCallUncachedWarning',
]

[tool.basedpyright]
reportImplicitStringConcatenation = "none"
reportUnnecessaryIsInstance = "none"
reportUnusedCallResult = "none"
reportExplicitAny = "none"
reportPrivateUsage = "none"

# Multiple reasons for this:
# - make_subst_func is reported as having an incomplete type (but only in CI?)
# - numpy scalar types are reported as incomplete (because of "any" precision)
reportUnknownVariableType = "none"

reportUnusedParameter = "hint"
reportUnreachable = "hint"
reportUnnecessaryComparison = "hint"

# This reports even cycles that are qualified by 'if TYPE_CHECKING'. Not what
# we care about at this moment.
# https://github.com/microsoft/pyright/issues/746
reportImportCycles = "none"

pythonVersion = "3.10"
pythonPlatform = "All"

exclude = [
    "proto-tests/*.py",
    "contrib/mem-pattern-explorer/*.py",
    "loopy/ipython_ext.py",
    "loopy/frontend/fortran/*.py",
    "doc",
    ".conda-root",
]

[[tool.basedpyright.executionEnvironments]]
root = "test"
reportArgumentType = "hint"
reportAttributeAccessIssue = "none"
reportMissingImports = "none"
reportMissingParameterType = "none"
reportUnknownArgumentType = "none"
reportUnknownMemberType = "hint"
reportUnknownParameterType = "none"
reportUnknownVariableType = "none"
