[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "loopy"
version = "2025.2"
description = "A code generator for array-based code on CPUs and GPUs"
readme = "README.rst"
license = "MIT"
authors = [
    { name = "Andreas Kloeckner", email = "inform@tiker.net" },
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Other Audience",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]
dependencies = [
    "pytools>=2025.2.2",
    "pymbolic>=2024.2.2",
    "genpy>=2016.1.2",

    # https://github.com/inducer/loopy/pull/419
    "numpy>=1.19",

    "cgen>=2025.1",
    "islpy>=2025.2.5",
    "codepy>=2017.1",
    "colorama",
    "Mako",
    "constantdict",

    "typing-extensions>=4",
    "strenum>=0.4.15",

    "namedisl @ git+https://github.com/inducer/namedisl.git@main"
]
[project.optional-dependencies]
pyopencl = [
    "pyopencl>=2022.3",
]

[dependency-groups]
dev = [
    # https://github.com/astral-sh/ruff/issues/16943
    "ruff!=0.11.1,!=0.11.2",
    "types-colorama",
    "types-Pygments",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
exclude = [
  "/loopy/target/c/compyte/.*",
  "/.test*.yml",
  "/asv*.json",
  "/MEMO",
  "/requirements.txt",
  "/.ci*",
  "/.git*",
  "/.git*",
  "/doc/_build",
  "/run-*.sh",
  "/.editorconfig",
  "/.basedpyright",
]

[project.urls]
Documentation = "https://documen.tician.de/loopy"
Homepage = "https://github.com/inducer/loopy"

[tool.setuptools.package-dir]
# https://github.com/Infleqtion/client-superstaq/pull/715
"" = "."

[tool.ruff]
preview = true

[tool.ruff.lint]
extend-select = [
    "B",   # flake8-bugbear
    "C",   # flake8-comprehensions
    "E",   # pycodestyle
    "F",   # pyflakes
    "FA",  # flake8-future-annotations
    "I",   # flake8-isort
    "N",   # pep8-naming
    "NPY", # numpy
    "PGH", # pygrep-hooks
    "Q",   # flake8-quotes
    "RUF", # ruff
    "SIM", # flake8-simplify
    "TC",  # flake8-type-checking
    "UP",  # pyupgrade
    "W",   # pycodestyle
]
extend-ignore = [
    "C90",  # McCabe complexity
    "missing-whitespace-around-arithmetic-operator",
    "module-import-not-at-top-of-file",
    "camelcase-imported-as-acronym",
    "collapsible-if",
    "non-empty-init-module",
    "type-check-without-type-error",
    "try-consider-else",

    # FIXME
    "printf-string-formatting", # .format instead of %s
    "blind-except",
]

[tool.ruff.lint.per-file-ignores]
"test/test_loopy.py" = ["function-uses-loop-variable"]
"proto-tests/*.py" = ["B"]
"contrib/**/*.py" = ["missing-required-import"]
"doc/conf.py" = ["missing-required-import", "exec-builtin"]
"*.ipynb" = ["missing-required-import"]
"examples/**/*.py" = ["missing-required-import"]
"proto-tests/**/*.py" = ["missing-required-import", "exec-builtin"]
"test/**/*.py" = ["missing-required-import"]
"test/test_*.py" = ["exec-builtin"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"
multiline-quotes = "double"

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = [
    "pytools",
    "pymbolic",
    "islpy",
    "pyopencl",
    "cgen",
    "genpy",
]
known-local-folder = [
    "loopy",
]
lines-after-imports = 2
required-imports = ["from __future__ import annotations"]

[tool.typos.default]
extend-ignore-re = [
  "(?Rm)^.*(#|//)\\s*spellchecker:\\s*disable-line$"
]

[tool.typos.default.extend-words]
# like the numpy function, array range
arange = "arange"
# N-Dimensional
ND = "ND"
# an element-wise slice of array u
ue = "ue"
# used in an ordering context, "ab" / "ba"
ba = "ba"

[tool.typos.files]
extend-exclude = [
  "loopy/target/c/compyte",
  "notes/*/*.eps",
]

[tool.pytest.ini_options]
addopts = "--ignore=proto-tests"
filterwarnings = [
    'ignore:.*:loopy.diagnostic.DirectCallUncachedWarning',
]

[tool.basedpyright]
reportImplicitStringConcatenation = "none"
reportUnnecessaryIsInstance = "none"
reportUnusedCallResult = "none"
reportExplicitAny = "none"
reportPrivateUsage = "none"

# Multiple reasons for this:
# - make_subst_func is reported as having an incomplete type (but only in CI?)
# - numpy scalar types are reported as incomplete (because of "any" precision)
reportUnknownVariableType = "none"

reportUnusedParameter = "hint"
reportUnreachable = "hint"
reportUnnecessaryComparison = "hint"

# This reports even cycles that are qualified by 'if TYPE_CHECKING'. Not what
# we care about at this moment.
# https://github.com/microsoft/pyright/issues/746
reportImportCycles = "none"

pythonVersion = "3.12"
pythonPlatform = "All"

exclude = [
    "proto-tests/*.py",
    "contrib/mem-pattern-explorer/*.py",
    "loopy/ipython_ext.py",
    "doc",
    ".conda-root",
    ".venv",
]

# covered by ruff
reportUnusedImport = "none"

[[tool.basedpyright.executionEnvironments]]
root = "test"
reportArgumentType = "hint"
reportAttributeAccessIssue = "none"
reportMissingImports = "none"
reportMissingParameterType = "none"
reportUnknownArgumentType = "none"
reportUnknownMemberType = "hint"
reportUnknownParameterType = "none"
reportUnknownVariableType = "none"

[tool.pyrefly]
project-includes = [
    "**/*.py*",
]
project-excludes = [
    "proto-tests/*.py",
    "contrib/mem-pattern-explorer/*.py",
    "loopy/ipython_ext.py",
    "doc",
    ".conda-root",
    ".venv",
]
preset = "strict"
infer-with-first-use = false

[tool.pyrefly.errors]
implicit-any-parameter = "ignore"
implicit-any-empty-container = "ignore"
missing-override-decorator = "warn"
bad-override = "warn"

[[tool.pyrefly.sub-config]]
matches = "test/*.py"
[tool.pyrefly.sub-config.errors]
missing-override-decorator = "ignore"
bad-override-param-name = "ignore"

bad-argument-type = "warn"
missing-attribute = "warn"
